--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Rex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -146,6 +149,175 @@
                 <div class="title">
                     Результаты нашей работы <img src="img/smile.png">
                 </div>
+                <div class="results__sliders">
+                    <div class="results__slider_nav">
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                        <div class="results__slider_nav-block">
+                            <p>Аренда жилья в Феодосии</p>
+                            <p class="results__slider_nav-block-title">ARENDAFEO</p>
+                            <img class="results__slider_nav-img" src="img/comp.png">
+                            <p><span>Задача</span> - привести целевой трафик</p>
+                            <p><span>Срок сотрудничества</span> - 6 месяцев</p>
+                            <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
+                            <p>Повысили процент конверсий <span>в 15 раз</span> </p>
+                            <i>С клиентом работаем ежегодно в
+                                период туристического бизнеса в Крыму</i>
+
+
+                        </div>
+                    </div>
+                    <div class="results__slider_for">
+                        <div class="results__slider_for-block">
+                            <table>
+                                <tr>
+                                    <th>Запрос</th>
+                                    <th>Поисковая система</th>
+                                    <th>Позиция</th>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна от производителя</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Купить пластиковые окна рехау</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>23</td>
+                                </tr>
+
+                                <tr>
+                                    <td>пластиковые окна фирмы рехау</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>купить окна рехау в москве недорого</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>17</td>
+                                </tr>
+                                <tr>
+                                    <td>купить окна рехау цена</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>8</td>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна фирмы рехау</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>3</td>
+                                </tr>
+                                <tr>
+                                    <td>купить окна рехау цена</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>32</td>
+                                </tr>
+
+                                <tr>
+                                    <td>купить окна рехау в москве недорого</td>
+                                    <td><img src="img/yandex_logo_ru 1.png">Москва</td>
+                                    <td>18</td>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна от производителя</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна фирмы рехау</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>11</td>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна фирмы рехау</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>пластиковые окна фирмы рехау</td>
+                                    <td><img src="img/googlelogo_color_272x92dp 1.png">Москва</td>
+                                    <td>11</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
     </main>
@@ -177,9 +349,12 @@
     <script src="js/slick.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="js/main.js"></script>
 
     <script>
         var scene = document.getElementById('scene');
+        var sceneTwo = document.getElementById('sceneslide');
+
         var parallaxInstance = new Parallax(scene);
     </script>
 </body>
