--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="header__contacts">
                     <img src="img/tel.svg" alt="phone" title="phone">
                     <a href="tel:+7 (499) 403-17-10">+7 (499) 403-17-10</a>
-                    <button class="btn btn-call">Заказать звонок</button>
+                    <button class="btn btn-call" href="#popUpContacts" data-fancybox="">Заказать звонок</button>
                 </div>
             </div>
         </header>
@@ -48,13 +48,13 @@
                 </div>
                 <div class="container-lg">
                     <div class="row">
-                        <div class="main__banner-left col-6">
+                        <div class="main__banner-left col-sm-6">
                             <h1>SEO продвижение
                                 <span>с оплатой по факту</span> </h1>
                             <p>Никаких платежей до достижения результатов</p>
-                            <button>заказать услугу</button>
+                            <button href="#popUpContacts" data-fancybox="">заказать услугу</button>
                         </div>
-                        <ul id="scene" class="main__banner-right col-6">
+                        <ul id="scene" class="main__banner-right col-sm-6">
                             <li class="layer main__banner-right1" data-depth="0.10">
                                 <img src="img/main1.png">
                             </li>
@@ -85,7 +85,7 @@
 
                     <div class="AboutMethods__TopBlock">
                         <div class="row">
-                            <div class="AboutMethods__TopBlock-left col-8">
+                            <div class="AboutMethods__TopBlock-left col-sm-8">
                                 <div class="AboutMethods__TopBlock-left-title">
                                     Как работают
                                     <span>обычные SEO-компании</span>
@@ -98,7 +98,7 @@
                                     <li> <span>пустые обещания</span> по увеличению продаж</li>
                                 </ul>
                             </div>
-                            <div class="AboutMethods__TopBlock-right col-4">
+                            <div class="AboutMethods__TopBlock-right col-sm-4">
                                 <img src="img/bad.png">
                             </div>
                         </div>
@@ -107,10 +107,10 @@
 
                     <div class="AboutMethods__BottomBlock">
                         <div class="row">
-                            <div class="AboutMethods__BottomBlock-right col-4">
+                            <div class="AboutMethods__BottomBlock-right col-sm-4">
                                 <img src="img/cool.png">
                             </div>
-                            <div class="AboutMethods__BottomBlock-left col-8">
+                            <div class="AboutMethods__BottomBlock-left col-sm-8">
                                 <div class="AboutMethods__BottomBlock-left-title">
                                     Как работают
                                     <span> наши специалисты</span>
@@ -1013,6 +1013,7 @@
                     </a>
 
                     <div class="footer__additional">
+                        <p class="footer__additional-mobile d-sm-none">Наши контакты</p>
                         <div class="footer__additional-block">
                             <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20.9979 16.9211C20.9686 16.1088 20.6303 15.3508 20.0452 14.7866C18.8996 13.6819 17.9397 13.0442 17.0245 12.7797C15.7635 12.4153 14.5954 12.7467 13.5529 13.7648C13.5513 13.7663 13.5498 13.7678 13.5482 13.7694L12.4392 14.8702C11.746 14.4795 10.3983 13.6216 8.94213 12.1654L8.83418 12.0576C7.3778 10.6012 6.51995 9.25319 6.12961 8.56084L7.23047 7.45173C7.23203 7.45018 7.23358 7.44862 7.23514 7.44702C8.25319 6.40464 8.5846 5.23659 8.22017 3.9754C7.95566 3.06021 7.31799 2.10036 6.21328 0.954746C5.64915 0.369737 4.89114 0.0313564 4.07883 0.00207115C3.26602 -0.0272552 2.48607 0.255672 1.88117 0.79864L1.85763 0.819804C1.84672 0.829606 1.83605 0.839737 1.82564 0.850114C0.62146 2.0543 -0.00977043 3.74009 0.000114334 5.7253C0.0169717 9.0977 1.87043 12.9543 4.95804 16.0419C5.54026 16.6241 6.20196 17.2003 6.92474 17.7545C7.28424 18.0302 7.79915 17.9622 8.07481 17.6027C8.35052 17.2432 8.28252 16.7282 7.92297 16.4526C7.25709 15.942 6.64985 15.4135 6.11812 14.8819C3.32923 12.093 1.65542 8.66695 1.6407 5.71713C1.63311 4.18823 2.09302 2.9121 2.97087 2.02509L2.97715 2.01943C3.57339 1.48422 4.47611 1.51679 5.03236 2.09359C7.15611 4.29606 7.00234 5.33585 6.0639 6.29816L4.54329 7.83019C4.30482 8.07046 4.23842 8.43255 4.37611 8.74181C4.41471 8.82851 5.34859 10.8921 7.67438 13.2179L7.78237 13.3258C10.1079 15.6513 12.1715 16.5852 12.2582 16.6238C12.5674 16.7615 12.9296 16.6951 13.1698 16.4566L14.7019 14.936C15.6643 13.9975 16.7041 13.8438 18.9064 15.9676C19.4832 16.5237 19.5158 17.4265 18.9807 18.0227L18.9749 18.0291C18.0951 18.8998 16.8326 19.3594 15.3203 19.3594C15.3079 19.3594 15.2954 19.3594 15.2829 19.3593C14.0741 19.3533 12.6744 19.0219 11.2351 18.4011C10.8192 18.2216 10.3364 18.4134 10.157 18.8294C9.97757 19.2454 10.1693 19.7281 10.5853 19.9075C12.249 20.6252 13.8267 20.9927 15.2747 20.9999C15.2901 21 15.3054 21 15.3208 21C17.286 21 18.955 20.3692 20.1499 19.1744C20.1603 19.164 20.1704 19.1533 20.1802 19.1424L20.2014 19.1187C20.7444 18.5139 21.0273 17.7334 20.9979 16.9211Z" fill="#FF5F46"/>
@@ -1026,7 +1027,7 @@
                                 </svg>
                             <a href="tel:+7 (925) 957-17-81">+7 (925) 957-17-81</a>
                         </div>
-                        <div class="footer__additional-block">
+                        <div class="footer__additional-block footer__additional-block-mail">
                             <svg width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M19.2188 8.86189C19.6502 8.86189 20 8.51839 20 8.09463V3.06905C20 1.37678 18.5981 0 16.875 0H3.125C1.40188 0 0 1.37678 0 3.06905V11.9309C0 13.6232 1.40188 15 3.125 15H16.875C18.5981 15 20 13.6232 20 11.9309C20 11.5072 19.6502 11.1637 19.2188 11.1637C18.7873 11.1637 18.4375 11.5072 18.4375 11.9309C18.4375 12.7771 17.7366 13.4655 16.875 13.4655H3.125C2.26344 13.4655 1.5625 12.7771 1.5625 11.9309V3.23164L8.3498 7.37659C8.85875 7.68737 9.42937 7.84277 10 7.84277C10.5706 7.84277 11.1412 7.68737 11.6502 7.37659L18.4375 3.23164V8.09463C18.4375 8.51839 18.7873 8.86189 19.2188 8.86189ZM10.8251 6.07343C10.3162 6.38421 9.68383 6.38424 9.17492 6.07343L2.21441 1.82271C2.47098 1.64141 2.78551 1.53453 3.125 1.53453H16.875C17.2145 1.53453 17.529 1.64144 17.7856 1.82275L10.8251 6.07343Z" fill="#FF5F46"/>
                                     </svg>
@@ -1041,7 +1042,7 @@
             </div>
         </footer>
 
-        <a href="#header" class="anchor__top">
+        <a href="#header" id="toTop" class="anchor__top">
             <svg width="116" height="116" viewBox="0 0 116 116" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g filter="url(#filter0_d)">
                 <circle r="26" transform="matrix(1.39071e-07 1 1 -1.39071e-07 58 46)" fill="#FF5F46"/>
@@ -1064,6 +1065,25 @@
     </div>
 
 
+    <div id="popUpContacts" style="display: none;">
+        <div class="popUpContacts__title">
+            Оставьте заявку,
+            <span>и мы свяжемся с Вами</span>
+
+
+        </div>
+        <form action="">
+            <input type="text" placeholder="Ваше имя" required>
+            <input type="tel" placeholder="ваш номер телефона" required>
+            <input type="submit" value="отправить заявку" class="btn-form">
+            <div class="checkbox">
+                <input type="checkbox" id="checkboxB" name="checkboxB">
+                <label for="checkboxB"> Вы соглашаетесь с условиями <a href="#">обработки персональных данных</a></label><br>
+            </div>
+        </form>
+
+        <img src="img/popup.png">
+    </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.js"></script>
