--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="container-lg">
                     <div class="paymentFact__block">
                         <p>Нет результата — не платите! Оплата только по факту!</p>
-                        <button>обратный звонок</button>
+                        <button href="#popUpContacts" data-fancybox="">обратный звонок</button>
                         <img src="img/BigDed.png">
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     </div>
                     <div class="results__sliders">
                         <div class="results__slider_nav">
-                            <div class="results__slider_nav-block">
+                            <div class="results__slider_nav-block results__slider_nav-block-one">
                                 <p>Аренда жилья в Феодосии</p>
                                 <p class="results__slider_nav-block-title">ARENDAFEO</p>
                                 <img class="results__slider_nav-img" src="img/comp.png">
@@ -164,83 +164,85 @@
 
 
                             </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
+                            <div class="results__slider_nav-block results__slider_nav-block-two">
+                                <p>Мёд и продукты пчеловодства</p>
+                                <p class="results__slider_nav-block-title">АЛТАЙ ПРЕМИУМ</p>
+                                <img class="results__slider_nav-img" src="img/comp1.png">
                                 <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                                <p><span>Срок сотрудничества</span> - более 3х лет</p>
+
+                                <p> Органический трафик<span>  - более 5 000 чел./месяц</span></p>
+
+                                <i>Сотрудничество с клиентом началось
+                                    с разработки текущего сайта</i>
 
                             </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
-                                <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                            <div class="results__slider_nav-block results__slider_nav-block-three">
+                                <p>Продажа шин и аксессуаров для авто </p>
+                                <p class="results__slider_nav-block-title">Альфа Шины</p>
+                                <img class="results__slider_nav-img" src="img/comp2.png">
 
+                                <p><span>Задача</span> - увеличение кол-ва заявок</p>
+                                <p><span>Срок сотрудничества</span> - более 6 лет</p>
 
-                            </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
-                                <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                                <p> Среднее кол-во заявок<span> - 58 шт./мес.</span></p>
+
+                                <p>Вывели 70% запросов <span>в ТОП-10</span> </p>
+                                <i>Сотрудничество с клиентом началось
+                                    с разработки текущего сайта и
+                                    внедрения ЧПУ-фильтра</i>
 
 
                             </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
-                                <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                            <div class="results__slider_nav-block results__slider_nav-block-four">
+                                <p>Автошкола</p>
+                                <p class="results__slider_nav-block-title">Авто ДПС</p>
+                                <img class="results__slider_nav-img" src="img/comp3.png">
 
+                                <p><span>Задача</span> - позиции сайта в ТОП 10</p>
+                                <p><span>Срок сотрудничества</span> - более года</p>
 
-                            </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
-                                <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                                <p>Повысили процент конверсий<span> в 7 раз</span></p>
+
+                                <p>Вывели 70% запросов <span>в ТОП-10</span> </p>
+
 
 
                             </div>
-                            <div class="results__slider_nav-block">
-                                <p>Аренда жилья в Феодосии</p>
-                                <p class="results__slider_nav-block-title">ARENDAFEO</p>
-                                <img class="results__slider_nav-img" src="img/comp.png">
-                                <p><span>Задача</span> - привести целевой трафик</p>
-                                <p><span>Срок сотрудничества</span> - 6 месяцев</p>
-                                <p>Увеличили кол-во трафика<span> в 9 раз</span></p>
-                                <p>Повысили процент конверсий <span>в 15 раз</span> </p>
-                                <i>С клиентом работаем ежегодно в
-                                    период туристического бизнеса в Крыму</i>
+                            <div class="results__slider_nav-block results__slider_nav-block-three">
+                                <p>Пластиковые окна</p>
+                                <p class="results__slider_nav-block-title">НЕМЕЦКИЕ ОКНА</p>
+                                <img class="results__slider_nav-img" src="img/comp4.png">
+                                <p><span>Задача</span> - позиции сайта в ТОП 10</p>
+                                <p><span>Срок сотрудничества</span> - 3 года</p>
+
+                                <p>Повысили процент конверсий<span> в 12 раз</span></p>
+
+                                <p>Вывели 74% запросов<span> в ТОП-10</span> </p>
+                                <i>С клиентом работали по настройке
+                                    контекстной рекламы и по разработке
+                                    сайта для нового направления</i>
 
 
                             </div>
+                            <div class="results__slider_nav-block results__slider_nav-block-five">
+                                <p>Пересадка волос в Алматы</p>
+                                <p class="results__slider_nav-block-title">Dr.Bezrukov</p>
+                                <img class="results__slider_nav-img" src="img/comp5.png">
+
+                                <p><span>Задача</span> - позиции сайта в ТОП 10</p>
+
+                                <p><span>Срок сотрудничества</span> - более 4 лет</p>
+
+                                <p> Увеличили видимость сайта<span> в 15 раз</span></p>
+
+                                <p> Повысили процент конверсий <span>в 8 раз</span> </p>
+                                <i>В процессе продвижения было принято
+                                    решение сделать редизайн сайта</i>
+
+
+                            </div>
+
                         </div>
                         <div class="results__slider_for">
                             <div class="results__slider_for-block">
