--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     </a>
                 </div>
                 <ul class="header__menu">
-                    <li><a href="#">Почему мы?</a></li>
-                    <li><a href="#">С нами  уже работают</a></li>
-                    <li><a href="#">Взглянуть на кейсы</a></li>
+                    <li><a href="#about">Почему мы?</a></li>
+                    <li><a href="#brands">С нами  уже работают</a></li>
+                    <li><a href="#results">Взглянуть на кейсы</a></li>
                 </ul>
                 <div class="header__contacts">
                     <img src="img/tel.svg" alt="phone" title="phone">
@@ -76,7 +76,7 @@
                 </div>
 
             </section>
-            <section class="AboutMethods">
+            <section class="AboutMethods" id='about'>
                 <div class="container-lg">
                     <div class="scale_title">
                         <p id="AboutMethodsTitle">О методах работы</p>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </section>
-            <section class="results">
+            <section class="results" id="results">
                 <div class="container-lg">
                     <div class="scale_title">
                         <p id="resultsTitle">Взгляните на кейсы</p>
@@ -955,7 +955,7 @@
                 </div>
             </section>
 
-            <section class="brands">
+            <section class="brands" id='brands'>
                 <div class="container-lg">
                     <div class="title">Уже выбрали нас</div>
                     <div class="brands__list">
